# TRINOMIAL-TREE-PRICING

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
src/pricing/: __init__.py  blackscholes.py  convergence.py  dev_file.ipynb  funcs.py  graphique.py  main.ipynb  market.py  model.py  node.py  option.py  trinomial_tree.py
tests/: test_funcs.py  test_node.py  test_trinomial_tree.py
venv_pricing/: .gitignore  pyvenv.cfg
